VectorParser.py
# Generated from Vector.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO
from VectorAst import *


class VectorParser ( Parser ):

    grammarFileName = "Vector.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "OP_ADD", "OP_SUB", 
                      "OP_MUL", "OP_DIV", "NUM", "ID", "WS" ]

    RULE_compileUnit = 0
    RULE_expr = 1

    ruleNames =  [ "compileUnit", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    OP_ADD=3
    OP_SUB=4
    OP_MUL=5
    OP_DIV=6
    NUM=7
    ID=8
    WS=9

    def __init__(self, module , builder , printf, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None
        self.module = module
        self.builder = builder
        self.printf = printf

    def parse(self):
        def program(p):
            return Print(self.builder, self.module, self.printf)

    class CompileUnitContext(ParserRuleContext):

        def __init__(self, module, builder,printf, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.module = module
            self.builder = builder
            self.printf = printf

        def expr(self):
            return (self.module , self.builder, self.getTypedRuleContext(VectorParser.ExprContext,0))


        def EOF(self):
            return (self.module , self.builder,self.getToken(VectorParser.EOF, 0))

        def getRuleIndex(self):
            return (self.module , self.builder, VectorParser.RULE_compileUnit)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompileUnit" ):
                listener.enterCompileUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompileUnit" ):
                listener.exitCompileUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompileUnit" ):
                return (self.module , self.builder,visitor.visitCompileUnit(self))
            else:
                return (self.module , self.builder, visitor.visitChildren(self))

    def compileUnit(self):
        localctx = VectorParser.CompileUnitContext(self,self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compileUnit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.expr(0)
            self.state = 5
            self.match(VectorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return (localctx,self.module , self.builder)


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return (self.module , self.builder, VectorParser.RULE_expr)

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class InfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VectorParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return (self.module , self.builder, self.getTypedRuleContexts(VectorParser.ExprContext))
            else:
                return (self.module , self.builder, self.getTypedRuleContext(VectorParser.ExprContext,i))

        def OP_MUL(self):
            return (self.module , self.builder, self.getToken(VectorParser.OP_MUL, 0))
        def OP_DIV(self):
            return (self.module , self.builder, self.getToken(VectorParser.OP_DIV, 0))
        def OP_ADD(self):
            return (self.module , self.builder,self.getToken(VectorParser.OP_ADD, 0))
        def OP_SUB(self):
            return (self.module , self.builder, self.getToken(VectorParser.OP_SUB, 0))

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfixExpr" ):
                listener.enterInfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfixExpr" ):
                listener.exitInfixExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfixExpr" ):
                return (self.module , self.builder, visitor.visitInfixExpr(self))
            else:
                return (self.module , self.builder, visitor.visitChildren(self))


    class UnaryExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VectorParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return (self.module , self.builder, self.getTypedRuleContext(VectorParser.ExprContext,0))

        def OP_ADD(self):
            return (self.module , self.builder,self.getToken(VectorParser.OP_ADD, 0))
        def OP_SUB(self):
            return (self.module , self.builder, self.getToken(VectorParser.OP_SUB, 0))

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return (self.module , self.builder, visitor.visitUnaryExpr(self))
            else:
                return ( self.module , self.builder ,visitor.visitChildren(self))


    class FuncExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VectorParser.ExprContext
            super().__init__(parser)
            self.func = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return (self.module , self.builder,self.getTypedRuleContext(VectorParser.ExprContext,0))

        def ID(self):
            return (self.module , self.builder,self.getToken(VectorParser.ID, 0))

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncExpr" ):
                listener.enterFuncExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncExpr" ):
                listener.exitFuncExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncExpr" ):
                return (self.module , self.builder,visitor.visitFuncExpr(self))
            else:
                return (self.module , self.builder, visitor.visitChildren(self))


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VectorParser.ExprContext
            super().__init__(parser)
            self.value = None # Token
            self.copyFrom(ctx)

        def NUM(self):
            return (self.module , self.builder, self.getToken(VectorParser.NUM, 0))

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return (self.module , self.builder,visitor.visitNumberExpr(self))
            else:
                return (self.module , self.builder,visitor.visitChildren(self))


    class ParensExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VectorParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return (self.module , self.builder, self.getTypedRuleContext(VectorParser.ExprContext,0))


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParensExpr" ):
                listener.enterParensExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParensExpr" ):
                listener.exitParensExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParensExpr" ):
                return (self.module , self.builder, visitor.visitParensExpr(self))
            else:
                return (self.module , self.builder, visitor.visitChildren(self))



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = VectorParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VectorParser.T__0]:
                localctx = VectorParser.ParensExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 8
                self.match(VectorParser.T__0)
                self.state = 9
                self.expr(0)
                self.state = 10
                self.match(VectorParser.T__1)
                pass
            elif token in [VectorParser.OP_ADD, VectorParser.OP_SUB]:
                localctx = VectorParser.UnaryExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 12
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==VectorParser.OP_ADD or _la==VectorParser.OP_SUB):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 13
                self.expr(5)
                pass
            elif token in [VectorParser.ID]:
                localctx = VectorParser.FuncExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                localctx.func = self.match(VectorParser.ID)
                self.state = 15
                self.match(VectorParser.T__0)
                self.state = 16
                self.expr(0)
                self.state = 17
                self.match(VectorParser.T__1)
                pass
            elif token in [VectorParser.NUM]:
                localctx = VectorParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 19
                localctx.value = self.match(VectorParser.NUM)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 28
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = VectorParser.InfixExprContext(self, VectorParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 22
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 23
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==VectorParser.OP_MUL or _la==VectorParser.OP_DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 24
                        localctx.right = self.expr(5)
                        pass

                    elif la_ == 2:
                        localctx = VectorParser.InfixExprContext(self, VectorParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 25
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 26
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==VectorParser.OP_ADD or _la==VectorParser.OP_SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 27
                        localctx.right = self.expr(4)
                        pass

             
                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return (self.module , self.builder,localctx)



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




